--- a/css/prosjekt.css
+++ b/css/prosjekt.css
@@ -70,7 +70,7 @@ li:last-child {
     top: 18%;
     width: 10%;
     height: 83%;
-    background: url("../bilder/ad.gif");
+    background: url("../bilder/ad.jpg");
     background-size: contain;
     background-repeat: no-repeat;
     color: whitesmoke;
@@ -82,7 +82,7 @@ li:last-child {
     top: 18%;
     width: 10%;
     height: 83%;
-    background: url("../bilder/ad.gif");
+    background: url("../bilder/ad.jpg");
     background-size: contain;
     background-repeat: no-repeat;
     color: whitesmoke;
